add Galaxy.java(page of 2)

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -25,6 +25,6 @@
         android:layout_height="wrap_content"
         android:text="@string/go_button"
         android:background="#808080"
-        android:onClick="star" />
+        android:onClick="goGalaxy" />
 
 </LinearLayout>
